prepare for separate course

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# The course contents should not be included in this source code
+/public/course
+
