--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,6 @@ test:
 
 production:
   adapter: sqlite3
-  database: db/production.sqlite3
+  database: /data/production.sqlite3
   pool: 10
   timeout: 10000
