--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,6 @@ production:
   database: db/production.sqlite3
   pool: 10
   timeout: 10000
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
