--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,3 +5,9 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+
+azure:
+  service: AzureStorage
+  storage_account_name: <%= ENV['AZURE_STORAGE_ACCOUNT'] %>
+  storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
+  container: <%= ENV['DATABASE_NAME'].dasherize %>-<%= Rails.env %>
