--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,4 +10,4 @@ azure:
   service: AzureStorage
   storage_account_name: <%= ENV['AZURE_STORAGE_ACCOUNT'] %>
   storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
-  container: <%= ENV['DATABASE_NAME'].dasherize %>-<%= Rails.env %>
+  container: <%= ENV['DATABASE_NAME'].try(:dasherize) %>-<%= Rails.env %>
