--- a/test/fixtures/submits.yml
+++ b/test/fixtures/submits.yml
@@ -1,11 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 one:
-  user: 
-  pset: 
-  submitted_at: 2013-01-06 16:16:50
+    user: test_user
+    pset: m2
 
 two:
-  user: 
-  pset: 
-  submitted_at: 2013-01-06 16:16:50
+    user: test_user
+    pset: m4
+
+three:
+    user: test_user
+    pset: m6
+
+four:
+    user: test_user
+    pset: tentamen
