--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-one:
-  name: MyString
-  uvanetid: MyString
-  mail: MyString
-  avatar: MyString
-
-two:
-  name: MyString
-  uvanetid: MyString
-  mail: MyString
-  avatar: MyString
+test_user:
+    name: Test User
+    mail: test@example.com
