--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,17 @@
     "theme_color": "#F4F9FF",
     "orientation": "portrait",
     "start_url": "/",
-    "scope": "/"
+    "scope": "/",
+    "icons": [
+        {
+            "src": "/browser/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/browser/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
 }
