--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+/db/*.sqlite3*
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
+/log/*.log.*
 /tmp
 /storage
 
